image with text -- alignment of graphics to fix to top -- firts revision

--- a/parallax-supanatural-theme/custom.css
+++ b/parallax-supanatural-theme/custom.css
@@ -6,7 +6,7 @@
 
 html {
     /* Smooth scroll  - Not working */
-    /* overflow-y: scroll;
+    /*     overflow-y: scroll;
     scroll-behavior: smooth; */
 }
 
@@ -122,4 +122,33 @@ h1.header__heading,
 .isolate .rich-text__wrapper {
     width: 100% !important;
     max-width: calc(100% - 10rem);
+}
+
+.image-with-text {
+    position: relative;
+    background-color: white;
+    max-width: none;
+}
+
+.image-with-text .media>img {
+    object-fit: contain;
+    top: -36px !important;
+}
+
+@media screen and (max-width: 749px) { 
+
+    .image-with-text .media>img {
+            object-fit: contain;
+            top: -37px !important;
+        }
+
+}
+
+.image-with-text__media.image-with-text__media--medium.gradient.color-background-1.global-media-settings.media {
+    overflow: visible !important;
+}
+
+.image-with-text .button{
+     color: black !important;
+     background-color: white !important;
 }
